--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tailwindcss/vite": "^4.1.4",
     "cloudinary": "^2.6.0",
     "firebase": "^11.6.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
+    "mongoose": "^8.13.2",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
