--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@heroui/react": "^2.7.6",
     "@tailwindcss/vite": "^4.1.4",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "cloudinary": "^2.6.0",
     "firebase": "^11.6.0",
     "formidable": "^3.5.4",
@@ -18,8 +21,8 @@
     "lucide-react": "^0.488.0",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
