--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
