--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroui/react": "^2.7.6",
+    "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.4",
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/react": "^2.11.7",
