--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
-    "cloudinary": "^2.6.0",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "firebase": "^11.6.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.7.3",
