--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@tiptap/starter-kit": "^2.11.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
+    "cookie": "^1.0.2",
     "firebase": "^11.6.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.7.3",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
